# notes

./: README.md
01_leetcode/: CMakeLists.txt  Sort.cpp
01_leetcode/array/: CMakeLists.txt  _209.hpp  _27.hpp  _704.hpp  _977.hpp  main.cpp
01_leetcode/back_tracking/: CMakeLists.txt
01_leetcode/src/: common_utils.h  define.h
99_tools/google_test_examples/: 00_test_hello.cpp  01_test_factorial.cpp  02_test_TEST_F.cpp  CMakeLists.txt  common.h  main.cpp
99_tools/sth/: vscode使用mingw和cmake运行OpenCV C++ 程序.md
alg/01-papers/Transformer/: transformer入门篇1.md
cpp/sync_queue/: SimpleSyncQueue.h
leetcode/: CMakeLists.txt
leetcode/array/: _59.hpp  main.cpp
leetcode/back_tracking/: _77.hpp  main.cpp
leetcode/src/: define.h  main.cpp
reading-notes/: Leetcode刷题笔记.md  README.md  深入应用C++11代码优化与工程级应用-读书笔记.md
reading-notes/01-computer_network/: README.md
reading-notes/01-computer_network/王道考研-计算机网络/: P1.1 计算机网络基本概念.emmx  P1.3 计算机网络分层结构.emmx  P2 物理层.emmx  P3.2 数据链路层（中）.emmx  P4.1 网络层（上）.emmx  P4.3 网络层（下）.emmx  P5.1 传输层（上）.emmx  P5.2 传输层（中）.emmx  P6.1 应用层（上）.emmx  P6.2 应用层（下）.emmx  README.md
reading-notes/01-computer_network/第三方笔记/: README.md
reading-notes/02-computer_network/王道考研-计算机网络/: P1.1 计算机网络基本概念.emmx  P1.2 性能指标.emmx  P1.3 计算机网络分层结构.emmx  P3.1 数据链路层（上）.emmx  P3.2 数据链路层（下）.emmx  P3.3 数据链路层（下）.emmx  P4.1 网络层（上）.emmx  P4.2 网络层（中）.emmx  P5.3 传输层（下）.emmx  README.md
reading-notes/02-operating_system/: README.md
reading-notes/02-operating_system/linux/: ubuntu.md
reading-notes/02-operating_system/王道考研-操作系统/: P1 计算机系统概述.emmx  P2 进程管理1.emmx  P2 进程管理10.emmx  P2 进程管理11.emmx  P2 进程管理2.emmx  P2 进程管理3.emmx  P2 进程管理4.emmx  P2 进程管理5.emmx  P2 进程管理6.emmx  P2 进程管理7.emmx  P2 进程管理8.emmx  P2 进程管理9.emmx  P3 内存管理1.emmx  P3 内存管理2.emmx  P3 内存管理3.emmx
reading-notes/03-computer_composition/: README.md
reading-notes/03-computer_composition/王道考研-计算机组成原理/: P1 计算机系统概述1.emmx  P1 计算机系统概述2.emmx  P2 数据的表示和运算1.emmx  P3 存储系统1.emmx  P3 存储系统2.emmx  P3 存储系统3.emmx  P3 存储系统4.emmx  P3 存储系统5.emmx  P3 存储系统6.emmx  P4 指令系统1.emmx
reading-notes/05-practical_tools/CMake/: README.md
reading-notes/06-leetcode/: Leetcode刷题笔记.md
reading-notes/07-cpp/: C++ Primer.md  深入应用C++11代码优化与工程级应用-读书笔记.md
reading-notes/09-open_sources/: GoogleTest.md  geos库.md
reading-notes/2-computer_network/: 网络是怎样连接的.md  计算机网络-王道考研.md
reading-notes/3-operator_system/: 链接、装载与库常用工具.md
reading-notes/4-design_pattern/: UML类图.md
reading-notes/7-C++/: C++ Primer.md
reading-notes/99_ascendc/: Ascend C简介.emmx  learning_sources.md
reading-notes/99_records/: 一些库的安装构建和环境搭建.md
reading-notes/ascend_c/: Ascend C算子开发（基础篇）.emmx  matmul.md
reading-notes/tmp/: uuid.md  数据类型转换及进制表示.md
(+12 files in other folders)
